add sales invoices

--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -240,7 +240,7 @@
                         <a href="#"><i class="fa fa-industry"></i> <span>Accounts Receivable</span> <i class="fa fa-angle-left pull-right"></i></a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="quotations/quotations">Sales Quotations</a>
+                                <a href="quotations/">Sales Quotations</a>
                                 <!--<a href="#">Sales Quotations</a>-->
                             </li>
                             <li>
@@ -249,11 +249,11 @@
                             </li>
                             <li>
                                 <!--<a href="#">Sales Receipts</a>-->
-                                <a href="#">Sales Receipts</a>
+                                <a href="sales/salesreceipts">Sales Receipts</a>
                             </li>
                             <li>
                                 <!--<a href="#">Sales Invoices</a>-->
-                                <a href="#">Sales Receipts</a>
+                                <a href="sales/salesinvoices">Sales Invoices</a>
                             </li>
                         </ul>
                     </li>
