--- a/src/AccountGoWeb/Views/Quotations/Quotations.cshtml
+++ b/src/AccountGoWeb/Views/Quotations/Quotations.cshtml
@@ -1,6 +1,7 @@
-﻿<div>
+﻿@model string
+<div>
     <a href="~/Quotations/AddSalesQuotation">Add</a>
 </div>
 <div>
-    Sales Quotations List Here
+    @Model.ToString()
 </div>
