add content page for accounts, taxes, items, quotations

--- a/src/AccountGoWeb/Views/Quotations/Quotations.cshtml
+++ b/src/AccountGoWeb/Views/Quotations/Quotations.cshtml
@@ -4,27 +4,30 @@
     <a href="~/Quotations/AddSalesQuotation">Add</a>
 </div>
 <div>
-    <div id="myGrid" class="ag-fresh"></div>
+    <div id="quotations" class="ag-fresh"></div>
 </div>
 <script>
     console.log(@Html.Raw(Model));
 
     var columnDefs = [
-    {headerName: "Customer", field: "customerId"},
-    {headerName: "Date", field: "quotationDate"},
-    {headerName: "Payment term", field: "paymentTerm"}
+    {headerName: "Customer No", field: "customerId", width: 50},
+    {headerName: "Customer Name", field: "customerName", width: 350},
+    {headerName: "Date", field: "quotationDate", width: 100},
+    {headerName: "Amount", field: "amount", width: 100}
     ];
 
     var gridOptions = {
         columnDefs: columnDefs,
         rowData: @Html.Raw(Model),
+
+        // PROPERTIES - simple boolean / string / number properties
+        rowSelection: 'multiple',
      };
 
     // wait for the document to be loaded, otherwise
     // ag-Grid will not find the div in the document.
     document.addEventListener("DOMContentLoaded", function() {
-        var eGridDiv = document.querySelector('#myGrid');
+        var eGridDiv = document.querySelector('#quotations');
         new agGrid.Grid(eGridDiv, gridOptions);
     });
 </script>
-<script src="~/plugins/ag-grid/dist/ag-grid.js?ignore=notused24"></script>
