--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -274,7 +274,7 @@
                         <a href="#"><i class="fa fa-wrench"></i> <span>Inventory Control</span> <i class="fa fa-angle-left pull-right"></i></a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="#">Items</a>
+                                <a href="inventory/items">Items</a>
                             </li>
                             <li>
                                 <!--<a href="#">Inventory Control Journal</a>-->
@@ -296,6 +296,10 @@
                             <li>
                                 <!--<a href="#">Taxes</a>-->
                                 <a href="tax/taxes">Taxes</a>
+                            </li>
+                            <li>
+                                <!--<a href="#">Taxes</a>-->
+                                <a href="financials/accounts">Accounts</a>
                             </li>
                         </ul>
                     </li>
@@ -444,5 +448,7 @@
     <script src="~/plugins/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- AdminLTE App -->
     <script src="~/adminLTE/js/app.js"></script>
+    <!--AG-GRID-->
+    <script src="~/plugins/ag-grid/dist/ag-grid.js?ignore=notused24"></script>
 </body>
 </html>
