draft journal entry

--- a/src/AccountGoWeb/Views/Financials/JournalEntries.cshtml
+++ b/src/AccountGoWeb/Views/Financials/JournalEntries.cshtml
@@ -1,6 +1,7 @@
 ﻿@model string
 
 <div>
+    <a href="~/financials/addjournalentry">Add</a>
 </div>
 <div>
     <div id="journalentries" class="ag-fresh" style="height: 400px;"></div>
