--- a/src/AccountGoWeb/Views/Purchasing/PurchaseInvoices.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/PurchaseInvoices.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <div>
-    <a href="~/purchasing/addpurchaseinvoice">Add</a>
+    <a class="btn btn-sm btn-default btn-flat" href="~/purchasing/addpurchaseinvoice"><i class="fa fa-plus"></i>Add</a>
 </div>
 <div>
     <div id="purchaseinvoices" class="ag-fresh" style="height: 400px;"></div>
