--- a/src/AccountGoWeb/Views/Quotations/Quotations.cshtml
+++ b/src/AccountGoWeb/Views/Quotations/Quotations.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <div>
-    <a href="~/Quotations/AddSalesQuotation">Add</a>
+    <a href="~/quotations/addsalesquotation"><i class="fa fa-plus margin-a"></i>Add</a>
 </div>
 <div>
     <div id="quotations" class="ag-fresh"></div>
