--- a/src/AccountGoWeb/Views/Sales/SalesReceipts.cshtml
+++ b/src/AccountGoWeb/Views/Sales/SalesReceipts.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <div>
-    <a href="~/sales/addsalesreceipt">Add</a>
+    <a class="btn btn-sm btn-default btn-flat" href="~/sales/addreceipt">Add</a>
 </div>
 <div>
     <div id="receipts" class="ag-fresh" style="height: 400px;"></div>
