--- a/src/AccountGoWeb/Views/Sales/SalesInvoices.cshtml
+++ b/src/AccountGoWeb/Views/Sales/SalesInvoices.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <div>
-    <a href="~/sales/addsalesinvoice">Add</a>
+    <a class="btn btn-sm btn-default btn-flat" href="~/sales/addsalesinvoice">Add</a>
 </div>
 <div>
     <div id="salesinvoices" class="ag-fresh" style="height: 400px;"></div>
