tax config tabs

--- a/src/AccountGoWeb/Views/Financials/JournalEntries.cshtml
+++ b/src/AccountGoWeb/Views/Financials/JournalEntries.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <div>
-    <a class="btn btn-sm btn-default btn-flat" href="~/financials/addjournalentry">Add</a>
+    <a href="~/financials/addjournalentry"><i class="fa fa-plus margin-a"></i>New</a>
 </div>
 <div>
     <div id="journalentries" class="ag-fresh" style="height: 400px;"></div>
