--- a/src/AccountGoWeb/Views/Purchasing/PurchaseOrders.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/PurchaseOrders.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <div>
-    <a class="btn btn-sm btn-default btn-flat" href="~/purchasing/addpurchaseorder">Add</a>
+    <a ref="~/purchasing/addpurchaseorder"><i class="fa fa-plus margin-a"></i>New Order</a>
 </div>
 <div>
     <div id="purchaseorders" class="ag-fresh" style="height: 400px;"></div>
