--- a/src/AccountGoWeb/Views/Purchasing/Vendors.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Vendors.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <div>
-    <a class="btn btn-sm btn-default btn-flat" href="~/purchasing/addvendor">Add</a>
+    <a href="~/purchasing/addvendor"><i class="fa fa-plus margin-a"></i>New Vendor</a>
 </div>
 <div>
     <div id="vendors" class="ag-fresh" style="height: 400px;"></div>
