--- a/src/AccountGoWeb/Views/Sales/Customers.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Customers.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <div>
-    <a class="btn btn-sm btn-default btn-flat" href="~/sales/addcustomer">Add</a>
+    <a href="~/sales/addcustomer"><i class="fa fa-plus margin-a"></i>New Customer</a>
 </div>
 <div>
     <div id="customers" class="ag-fresh" style="height: 400px;"></div>
