--- a/src/AccountGoWeb/Views/Sales/salesorders.cshtml
+++ b/src/AccountGoWeb/Views/Sales/salesorders.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <div>
-    <a class="btn btn-sm btn-default btn-flat" href="~/sales/addsalesorder">Add</a>
+    <a href="~/sales/addsalesorder"><i class="fa fa-plus margin-a"></i>New Order</a>
 </div>
 <div>
     <div id="salesorders" class="ag-fresh" style="height: 400px;"></div>
