--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -340,6 +340,9 @@ desired effect
                                 <!--<a href="#">Taxes</a>-->
                                 <a href="~/financials/accounts">Accounts</a>
                             </li>
+                            <li>
+                                <a href="~/financials/banks">Banks</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="treeview">
