--- a/src/AccountGoWeb/Views/Sales/Allocate.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Allocate.cshtml
@@ -1,51 +1,74 @@
 ﻿@model AccountGoWeb.Models.Sales.Allocate
 
 <div class="col-md-9">
-    <div class="box">
-        <div class="box-header with-border">
-            <h3 class="box-title">General</h3>
-            <div class="box-tools pull-right">
-                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                    <i class="fa fa-minus"></i>
-                </button>
-            </div>
-        </div>
-        <div class="box-body">
-            <div class="col-sm-6">
-                <div class="row">
-                    <div class="col-sm-4">Receipt No</div>
-                    <div class="col-sm-8">No</div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4">Customer Name</div>
-                    <div class="col-sm-8">@Model.CustomerId</div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4">Receipt Date</div>
-                    <div class="col-sm-8">@Model.Date</div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4">Amount</div>
-                    <div class="col-sm-8">@Model.Amount</div>
+    <form action="~/sales/allocate" method="post">
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">General</h3>
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fa fa-minus"></i>
+                    </button>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="box">
-        <div class="box-header with-border">
-            <h3 class="box-title">Invoice</h3>
-            <div class="box-tools pull-right">
-                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                    <i class="fa fa-minus"></i>
-                </button>
+            <div class="box-body">
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-4">Receipt No</div>
+                        <div class="col-sm-8">No</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">Customer Name</div>
+                        <div class="col-sm-8">@Model.CustomerId</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">Receipt Date</div>
+                        <div class="col-sm-8">@Model.Date</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">Amount</div>
+                        <div class="col-sm-8">@Model.Amount</div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="box-body">
-            List of open invoices here for particular customer, and a textbox to the right to enter
-            amount to each invoice row.
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">Invoice</h3>
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fa fa-minus"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="box-body">
+                <div class="box-body table-responsive">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Invoice No</th>
+                                <th>Amount</th>
+                                <th>Allocated Amount</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @for (int i = 0; i < Model.AllocationLines.Count(); i++)
+                            {
+                                <tr>
+                                    <td>@Model.AllocationLines[i].InvoiceId</td>
+                                    <td>@Model.AllocationLines[i].Amount</td>
+                                    <td>
+                                        <input asp-for="@Model.AllocationLines[i].AllocatedAmount" class="form-control" type="text" />
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
-    </div>
-    <div>
-        <input class="btn btn-primary btn-flat" type="submit" value="Save" />
-    </div>
+        <div>
+            <input class="btn btn-primary btn-flat" type="submit" value="Save" />
+        </div>
+    </form>
 </div>
