--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -502,5 +502,6 @@ desired effect
         });
     </script>
     <!--//END TODO-->
+    @RenderSection("scripts", required: false)
 </body>
 </html>
