--- a/src/AccountGoWeb/Views/Sales/Allocate.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Allocate.cshtml
@@ -29,6 +29,10 @@
                         <div class="col-sm-4">Amount</div>
                         <div class="col-sm-8">@Model.Amount</div>
                     </div>
+                    <div class="row">
+                        <div class="col-sm-4">Remaining</div>
+                        <div class="col-sm-8">@Model.RemainingAmountToAllocate</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -49,6 +53,7 @@
                                 <th>Invoice No</th>
                                 <th>Amount</th>
                                 <th>Allocated Amount</th>
+                                <th>To Allocate</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -57,8 +62,9 @@
                                 <tr>
                                     <td>@Model.AllocationLines[i].InvoiceId</td>
                                     <td>@Model.AllocationLines[i].Amount</td>
+                                    <td>@Model.AllocationLines[i].AllocatedAmount</td>
                                     <td>
-                                        <input asp-for="@Model.AllocationLines[i].AllocatedAmount" class="form-control" type="text" />
+                                        <input asp-for="@Model.AllocationLines[i].AmountToAllocate" class="form-control" type="text" />
                                     </td>
                                 </tr>
                             }
